# ai-sim-emergent-agents

./: .gitignore  CODEX_HANDOFF.md  CODEX_LOGGING_AND_PLOTS_HANDOFF.md  CODEX_POST_EXPERIMENT_HANDOFF.md  CODEX_RAID_CONTROL_HANDOFF.md  CODEX_SOL_SPRINT_HANDOFF.md  CODEX_SOL_SPRINT_PROGRESS.md  CORE_REPLICATION_PLOTS_REPORT.md  CORE_REPLICATION_V2_METRICS_DICTIONARY.md  CORE_REPLICATION_V2_PLAN.md  CORE_REPLICATION_V2_PLAN_REVIEW.md  CORE_V2_RUNNER_HARDENING_BACKLOG.md  CORE_V2_TEST_GAP_AUDIT.md  EVENT_WRITER_MICROBENCHMARK_PLAN.md  EXPERIMENT_ATTEMPT_LEDGER_DESIGN.md  EXPERIMENT_COMPLETION_REPORT.md  LOGGING_ABLATION_PLAN.md  LOGGING_ABLATION_REPORT.md  RAID_CONTROL_PILOT_REPORT.md  RAID_SEMANTICS_AUDIT.md  README.md  SIMULATION_EXPERIENCE_ROADMAP.md  SUPERSEDED_ATTEMPTS_CLEANUP_PLAN.md  WIKI_INGEST_HANDOFF.md  analyze_core_replication.py  cleanup_core_replication.py  experiments.json  plot_core_replication.py  pyproject.toml  run_experiments.py  run_logging_ablation.py  run_raid_control_pilot.py
.github/workflows/: ci.yml
benchmarks/: benchmark_simulation.py
experiment_runs/raid-control-pilot-v1/: results.csv  summary.csv
src/thalren_vale/: __init__.py  combat.py  config.py  diplomacy.py  economy.py  events.py  factions.py  metrics.py  plugin_api.py  reproducibility.py  sim.py  state.py  technology.py
tests/: test_antistagnation.py  test_benchmark.py  test_config.py  test_events.py  test_experiment_runner.py  test_log_modes.py  test_plugin_security.py  test_raid_control.py  test_raid_control_pilot.py  test_reproducibility.py  test_simulation_state.py
